fix: logo on mobile

--- a/public/styles/components/_navbar.scss
+++ b/public/styles/components/_navbar.scss
@@ -35,6 +35,7 @@
   }
 
   .logo {
+    display: flex;
     width: 170px;
   }
 
@@ -152,7 +153,7 @@
 @media (max-width: 700px) {
   .nav {
     .logo{
-      display: none;
+      width: 100px;
     }
     .menu-circle{
       width: 130px;
@@ -161,6 +162,29 @@
         background-size: 50px;
         background-position-y: 31%;
       }
+    }
+  }
+}
+@media (max-width: 700px) {
+  .nav {
+    .logo{
+      width: 100px;
+    }
+    .menu-circle{
+      width: 130px;
+      height: 130px;
+      .title {
+        background-size: 50px;
+        background-position-y: 31%;
+      }
+    }
+  }
+}
+@media (max-width: 340px) {
+  .nav {
+    .menu-circle{
+      width: 110px;
+      height: 110px;
     }
   }
 }
